# CS2-Map-Ban-Pick-Tool

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  项目需求.prompt.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  bp.py  records.py  rooms.py  users.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  admin.py  bp_record.py  mappool.py  room.py  user.py
backend/app/schemas/: __init__.py  admin.py  bp.py  room.py
backend/app/websocket/: __init__.py  events.py  handlers.py  manager.py
backend/scripts/: init_db.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: global.css
frontend/src/router/: index.ts
frontend/src/services/: api.ts  socket.ts
frontend/src/stores/: bp.ts  chat.ts  room.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  storage.ts
frontend/src/views/: AdminDashboard.vue  AdminLogin.vue  BPProcess.vue  BPResult.vue  InputName.vue  JoinRoom.vue  SelectTeam.vue  WaitingRoom.vue
nginx/: nginx.conf
nginx/ssl/: .gitkeep
plans/: 01-项目整体架构设计.md  02-数据库模型设计.md  03-后端API接口规范.md  04-前端页面结构和组件架构.md  05-项目目录结构.md  06-Docker配置文件.md  07-开发环境配置文件.md
